--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "parcel build index.html"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
+    "eslint": "^8.0.1",
     "typescript": "^4.4.4"
   },
   "resolutions": {
